2006-12-22  Derek Scherger  <derek@echologic.com>

	* tests/add_ignores__MTN/__driver__.lua: new xfailed test for add *
	which fails on seeing _MTN
	* testsuite.lua: add it

2006-12-22  Derek Scherger  <derek@echologic.com>

	* cmd_list.cc (ls):
	* cmd_ws_commit.cc (mv,co): add semi's to ALIASes so indent-region works
	(pivot_root): tweak indentation
	(add,drop): use args_to_paths and new split_paths function
	* paths.{cc,hh} (split_paths): new function to split a vector of
	file_paths into a set of split_paths

2006-12-21  Thomas Keller  <me@thomaskeller.biz>

	* cmd_diff_log.cc: renamed --revision option to --to
	* option_list.hh: new block for --to
        * monotone.texi: ...documented here
	* NEWS: ...noted here
	* tests/*: ..honored appropriately

2006-12-21  Thomas Keller  <me@thomaskeller.biz>

	* NEWS: refined some sections and added notes about
        fixes in automate inventory and the localization code

2006-12-19  Thomas Keller  <me@thomaskeller.biz>

	* monotone.texi: added missing documentation for
	automate get_option

2006-12-19  Matthew Gregan  <kinetik@orcon.net.nz>

	* win32/main.cc: Disable the C runtime's built-in globbing.  This
	piece of magic causes more trouble and UI inconsistency than it
	seems to solve.

2006-12-18  Richard Levitte  <richard@levitte.org>

	* cmd_ws_commit.cc (CMD_NO_WORKSPACE(import)): Wrap the add,
	drop and commit calls in a try block so the temporary
	bookkeeping directory can be properly cleared even when
	there's an exception.
	* tests/import/__driver__.lua: Add a test

2006-12-18  Christof Petig <christof.petig@arcor.de>

	* basic_io.hh (peek): use widen to distinguish '\xff' and EOF
	* basic_io.cc (binary_transparency): add an unit test for this

2006-12-18  Matthew Gregan  <kinetik@orcon.net.nz>

	* database.cc (database::load),
	schema_migration.cc (migrator::migrate):
	PerformanceWork/SQLiteAnalyzeDiscussion in the wiki makes a strong
	argument that ANALYZE provides no benefit for our use profile.