@@ -8,7 +8,7 @@ writefile("subdir/file1", "111")
 check(mtn("add", "-R", "."), 0, false, false)
 
 -- simulate shell glob of "*" from workspace root dir
-xfail(mtn("add", "-R", "_MTN", "subdir"), 0, false, false)
+check(mtn("add", "-R", "_MTN", "subdir"), 0, false, false)
 
 -- simulate shell glob of "../*" from workspace subdir
 xfail(indir("subdir", mtn("add", "-R", "../_MTN", "../subdir")), 0, false, false)
