@@ -1,5 +1,15 @@
 2006-12-22  Derek Scherger  <derek@echologic.com>
 
+	* cmd.hh (args_to_paths): warn about bookkeeping paths but ignore them
+	* tests/_MTN_case-folding_security_patch/__driver__.lua:
+	mtn add no longer fails but still reports warnings on stderr
+	add checks for these warnings
+	add checks for ls known not listing bad paths
+	* tests/add_ignores__MTN/__driver__.lua:
+	un-xfail root glob testcase
+
+2006-12-22  Derek Scherger  <derek@echologic.com>
+
 	* tests/add_ignores__MTN/__driver__.lua: new xfailed test for add *
 	which fails on seeing _MTN
 	* testsuite.lua: add it
